tests/paczka1/fuzzy1/59100250.err
Error in line 1: A582 A368 55,7
Error in line 18: p2jZfV A582 88,6
